-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.5, 5.1.1
-
None
-
Qt 5: c15e8517ef877a141df7cd5d4767d19ac81e7c2e Qt 4: 72f6bd8d51911f8a2a0dadc7fa10509fa86970a1
Re-implemented QWidget::event(QEvent*) to catch key press event. But QKeyEvent::key() returns wrong value when pressing keys with Shift modifier.
For example, if Shift+3 is pressed, QKeyEvent::key() returns '3' instead of '#'.
- relates to
-
QTBUG-33054 QKeyEvent: wrong key value with Qt::ShiftModifier
-
- Closed
-
-
QTBUG-10032 Typing too fast ignores special characters (á ã)
-
- Closed
-
-
QTCREATORBUG-10269 Hungarian (and possibly other) keyboard layout problems
-
- Closed
-
-
QTBUG-35005 Keyboard events containing alt might trigger an assert and cause incorrect characters to be added
-
- Closed
-
-
QTBUG-33591 Bug in handling of US International Keyboard Layout on Windows
-
- Closed
-