src/gui/kernel/qkeymapper_win.cpp
@@ -662,7 +662,7 @@ void QKeyMapperPrivate::updateKeyMap(const MSG &msg)
 {
     unsigned char kbdBuffer[256]; // Will hold the complete keyboard state
     GetKeyboardState(kbdBuffer);
-    quint32 scancode = (msg.lParam >> 16) & 0xfff;
+    const quint32 scancode = (msg.lParam >> 16) & 0xff;
     updatePossibleKeyCodes(kbdBuffer, scancode, msg.wParam);
 }
 
@@ -797,10 +797,12 @@ bool QKeyMapperPrivate::translateKeyEvent(QWidget *widget, const MSG &msg, bool 
     bool k0 = false;
     bool k1 = false;
     int  msgType = msg.message;
+    // Add this key to the keymap if it is not present yet.
+    updateKeyMap(msg);
 
-    quint32 scancode = (msg.lParam >> 16) & 0xfff;
-    quint32 vk_key = MapVirtualKey(scancode, 1);
-    bool isNumpad = (msg.wParam >= VK_NUMPAD0 && msg.wParam <= VK_NUMPAD9);
+    const quint32 scancode = (msg.lParam >> 16) & 0xff;
+    const quint32 vk_key = msg.wParam;
+
     quint32 nModifiers = 0;
 
 #if defined(Q_OS_WINCE)
@@ -834,10 +836,6 @@ bool QKeyMapperPrivate::translateKeyEvent(QWidget *widget, const MSG &msg, bool 
     state |= (nModifiers & ControlAny ? int(Qt::ControlModifier) : 0);
     state |= (nModifiers & AltAny ? int(Qt::AltModifier) : 0);
     state |= (nModifiers & MetaAny ? int(Qt::MetaModifier) : 0);
-
-    // Now we know enough to either have MapVirtualKey or our own keymap tell us if it's a deadkey
-    bool isDeadKey = isADeadKey(msg.wParam, state)
-                     || MapVirtualKey(msg.wParam, 2) & 0x80000000;
 
     // A multi-character key not found by our look-ahead
     if (msgType == WM_CHAR) {
@@ -921,23 +919,12 @@ bool QKeyMapperPrivate::translateKeyEvent(QWidget *widget, const MSG &msg, bool 
             return true;
 
         // Translate VK_* (native) -> Key_* (Qt) keys
-        // If it's a dead key, we cannot use the toKeyOrUnicode() function, since that will change
-        // the internal state of the keyboard driver, resulting in that dead keys no longer works.
-        // ..also if we're typing numbers on the keypad, while holding down the Alt modifier.
-        int code = 0;
-        if (isNumpad && (nModifiers & AltAny)) {
-            code = winceKeyBend(msg.wParam);
-        } else if (!isDeadKey) {
-            // QTBUG-8764, QTBUG-10032
-            // Can't call toKeyOrUnicode because that would call ToUnicode, and, if a dead key
-            // is pressed at the moment, Windows would NOT use it to compose a character for the next
-            // WM_CHAR event.
+        int modifiersIndex = 0;
+        modifiersIndex |= (nModifiers & ShiftAny ? 0x1 : 0);
+        modifiersIndex |= (nModifiers & ControlAny ? 0x2 : 0);
+        modifiersIndex |= (nModifiers & AltAny ? 0x4 : 0);
 
-            // Instead, use MapVirtualKey, which will provide adequate values.
-            code = MapVirtualKey(msg.wParam, MAPVK_VK_TO_CHAR);
-            if (code < 0x20 || code == 0x7f) // The same logic as in toKeyOrUnicode()
-                code = winceKeyBend(msg.wParam);
-        }
+        int code = keyLayout[vk_key]->qtKey[modifiersIndex];
 
         // Invert state logic:
         // If the key actually pressed is a modifier key, then we remove its modifier key from the
